--- a/css/pagina_telefonia.css
+++ b/css/pagina_telefonia.css
@@ -1,5 +1,5 @@
 .degrade {
-    background-image:url(../img/background\ telefonia.jpg);
+    background-image:url(../img/background\ Telefonia\ 2.jpg);
     background-position: center;
     background-size: 100%;
 }
@@ -48,32 +48,27 @@ pre {
 
 .flex {
     display: flex;
-    margin: 0 auto;
     flex-wrap: wrap;
     margin-top: 70px;
     font-size: 18px;
-    text-align: center;
-    margin-left: 300px;
-    margin-right: 300px;   
-    
+    text-align: center;  
+    padding: 10px;    
 }
 
 
 .flex > div {
-    flex: 1 1 200px;
     border-radius: 10px;
     background-color:rgb(255, 255, 255);
     border: 1px solid gray;
-    max-width: 400px;
-    margin: auto;  
-    box-shadow: 6px 6px 9px grey;   
+    width: 500px;
+    margin: 0 auto;  
+    box-shadow: 6px 6px 9px grey;     
 }
 
 
 .icons{
    display: flex;
-   margin: auto;
-    
+   margin: auto;    
 }
 
 .botoes{
@@ -85,8 +80,12 @@ pre {
     margin: 0 0 30px 0;
     border-radius: 10px;
     border-color: #AA0E27;
-    font-family: Arial, Helvetica, sans-serif;      
-    
+    font-family: Arial, Helvetica, sans-serif;    
+}
+
+.botoes:hover{
+    background-color: aliceblue;
+    color: #AA0E27;
 }
 
 .contrate {
@@ -98,3 +97,39 @@ pre {
     margin: 0 0 30px 40px;
     font-size: 18px;
 }
+
+@media only screen and (max-width: 640px){
+    .flex div{
+        margin: 20px auto;
+    }
+} 
+
+@media only screen and (min-width: 641px) and (max-width: 768px){
+    .flex div{
+        margin: 20px auto;             
+    }
+}
+
+@media only screen and (min-width: 769px) and (max-width: 1024px){    
+    .flex div{
+        width: 300px;
+        margin: 20px auto;
+    }
+    
+}
+
+@media only screen and (min-width: 1025px) and (max-width: 1440px){
+    .flex div{
+        width: 400px;
+        margin: 20px auto;
+    }
+}
+
+@media only screen and (min-width: 1441px) {
+    .flex div{
+        margin: 20px auto;
+        width: 400px;
+    }
+    
+}
+
